Explanation of results page

--- a/index.html
+++ b/index.html
@@ -689,6 +689,17 @@ function toggleDataSeries(e) {
 <div id="chartContainer" style="height: 300px; width: 100%;"></div>
 <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
 		
+<br>
+<br>
+<p style="color:#FF0000";>How to interpret results!</p>
+<p style="color:#0F11F1";>If needed, move your cursor over the graph, and it will tell you the exact data points for each ear, the decibel (dB) level it was heard next to the ear identification, and the frequency (Hz) at the top.</p>
+<p> 10 Normal: If the data points appear at the 10dB marker, you have normal hearing in that ear at that frequency.</p>
+<p> 20 Slight Hearing-Loss: If the data points appear at the 20dB marker, you have Slight Hearing-Loss.</p>
+<p> 30-40 Mild Hearing-Loss: If the data points appear at the 30dB or 40dB marker, you have Mild Hearing-Loss.</p>
+<p> 50 Moderate Hearing-Loss: If the data points appear at the 50dB marker, you have Moderate Hearing-Loss.</p>
+<p> 60-70 Moderately-Severe Hearing-Loss: If the data points appear at the 60dB or 70dB marker, you have Moderately-Severe Hearing-Loss.</p>
+<p> 80-90 Severe Hearing-Loss: If the data points appear at the 80dB or 90dB marker, you have Severe Hearing-Loss.</p>
+<p> 100-110 Profound Hearing-Loss: If the data points appear at the 100dB or 110dB marker, you have Profound Hearing-Loss.</p>		
 
 </div>
 	<footer class="w3-bottom w3-container w3-flat-peter-river">
