--- a/index.html
+++ b/index.html
@@ -308,8 +308,6 @@ function toggleDataSeries(e) {
 	<p> 1. Try to take this test in as quiet of an environment as possible for optimal results. </p>
 	<p> 2. This exam must be used with headphones in order to detect changes in the left/right ear. Use the highest quality of headphones that you have to take this test. </p>
 	<p> 3. Use the audio play bar below to calibrate your device's master volume to an appropriate level to take this test. </p>
-	<br>
-	<br>
 	<br> 
 	<p> After pressing play and listening to the audiofile below, remove your headphones and try to replicate the sound you hear by pressing your hands firmly against one another in front of your nose and rubbing them together quickly. </p>
 	<p> Adjust the volume of your computer until the volume of the audiofile through your headphones matches the volume you create with your hands. </p>
@@ -687,8 +685,7 @@ function toggleDataSeries(e) {
 	<br>
 
 <div id="chartContainer" style="height: 300px; width: 100%;"></div>
-<script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
-<br>
+<script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script> <br>
 <p style="color:#FF0000";>How to interpret results!</p>
 <p style="color:#0F11F1";>If needed, move your cursor over the graph, and it will tell you the exact data points for each ear, the decibel (dB) level it was heard next to the ear identification, and the frequency (Hz) at the top.</p>
 <p> 10 Normal: If the data points appear at the 10dB marker, you have normal hearing in that ear at that frequency.</p>
@@ -697,7 +694,10 @@ function toggleDataSeries(e) {
 <p> 50 Moderate Hearing-Loss: If the data points appear at the 50dB marker, you have Moderate Hearing-Loss.</p>
 <p> 60-70 Moderately-Severe Hearing-Loss: If the data points appear at the 60dB or 70dB marker, you have Moderately-Severe Hearing-Loss.</p>
 <p> 80-90 Severe Hearing-Loss: If the data points appear at the 80dB or 90dB marker, you have Severe Hearing-Loss.</p>
-<p> 100-110 Profound Hearing-Loss: If the data points appear at the 100dB or 110dB marker, you have Profound Hearing-Loss.</p>		
+<p> 100-110 Profound Hearing-Loss: If the data points appear at the 100dB or 110dB marker, you have Profound Hearing-Loss.</p>	
+		
+<br>
+<br>
 
 </div>
 	<footer class="w3-bottom w3-container w3-flat-peter-river">
