--- a/index.html
+++ b/index.html
@@ -682,10 +682,9 @@ function toggleDataSeries(e) {
 	</div>
 	
     	<div id="content" class="w3-container">
-	<br>
-
 <div id="chartContainer" style="height: 300px; width: 100%;"></div>
-<script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script> <br>
+<script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
+<br>
 <p style="color:#FF0000";>How to interpret results!</p>
 <p style="color:#0F11F1";>If needed, move your cursor over the graph, and it will tell you the exact data points for each ear, the decibel (dB) level it was heard next to the ear identification, and the frequency (Hz) at the top.</p>
 <p> 10 Normal: If the data points appear at the 10dB marker, you have normal hearing in that ear at that frequency.</p>
@@ -695,9 +694,6 @@ function toggleDataSeries(e) {
 <p> 60-70 Moderately-Severe Hearing-Loss: If the data points appear at the 60dB or 70dB marker, you have Moderately-Severe Hearing-Loss.</p>
 <p> 80-90 Severe Hearing-Loss: If the data points appear at the 80dB or 90dB marker, you have Severe Hearing-Loss.</p>
 <p> 100-110 Profound Hearing-Loss: If the data points appear at the 100dB or 110dB marker, you have Profound Hearing-Loss.</p>	
-		
-<br>
-<br>
 
 </div>
 	<footer class="w3-bottom w3-container w3-flat-peter-river">
