--- a/index.html
+++ b/index.html
@@ -686,7 +686,7 @@ function toggleDataSeries(e) {
 <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
 <br>
 <p style="color:#FF0000";>How to interpret results!</p>
-<p style="color:#0F11F1";>If needed, move your cursor over the graph, and it will tell you the exact data points for each ear, the decibel (dB) level it was heard next to the ear identification, and the frequency (Hz) at the top.</p>
+<p style="color:#0F11F1";>Move your cursor over the graph and it will tell you the decibel (dB) level it was heard next to the ear identification and the frequency (Hz) at the top.</p>
 <p> 10 Normal: If the data points appear at the 10dB marker, you have normal hearing in that ear at that frequency.</p>
 <p> 20 Slight Hearing-Loss: If the data points appear at the 20dB marker, you have Slight Hearing-Loss.</p>
 <p> 30-40 Mild Hearing-Loss: If the data points appear at the 30dB or 40dB marker, you have Mild Hearing-Loss.</p>
