Trying to make Profound Hearing Loss sentence show

--- a/index.html
+++ b/index.html
@@ -692,9 +692,10 @@ function toggleDataSeries(e) {
 <p> 30-40 Mild Hearing-Loss: If the data points appear at the 30dB or 40dB marker, you have Mild Hearing-Loss.</p>
 <p> 50 Moderate Hearing-Loss: If the data points appear at the 50dB marker, you have Moderate Hearing-Loss.</p>
 <p> 60-70 Moderately-Severe Hearing-Loss: If the data points appear at the 60dB or 70dB marker, you have Moderately-Severe Hearing-Loss.</p>
-<p> 80-90 Severe Hearing-Loss: If the data points appear at the 80dB or 90dB marker, you have Severe Hearing-Loss. Any point over 90dB indicates Profound Hearing-Loss.</p>
-	
-
+<p> 80-90 Severe Hearing-Loss: If the data points appear at the 80dB or 90dB marker, you have Severe Hearing-Loss.</p>
+<p> 100-110 Profound Hearing-Loss: If the data points appear at the 100dB or 110dB marker, you have Profound Hearing-Loss.</p>
+<br>
+<p> Please consult medical professionals to recieve further medical diagnosis and treatment after this test if displaying signs of hearing-loss, and remember to take care of the health of your ears!
 </div>
 	<footer class="w3-bottom w3-container w3-flat-peter-river">
 	<p>DIY DIAGNOSTICS!</p>
