Specific wording and removing alert for dB

--- a/index.html
+++ b/index.html
@@ -142,10 +142,10 @@ function getLouder(){
         dB += 0.091;
 	}
 	
-function showdB(){
+/* function showdB(){
     alert("Decibel level is:" + dB.toString());
     console.log("Decibel level is:" + dB.toString());
-    }	
+    }	*/
 	
 function collectData(){
     	arr[pageNum][2] = dB * 110;
@@ -338,7 +338,7 @@ function toggleDataSeries(e) {
 <div id="content" class="w3-container">
 	
 <br>
-<p> Click the button below to hear the frequency. Adjust it to the quietest level you are able to hear the sound. </p>
+<p> Click the button below to hear the frequency. Adjust it to the quietest level you are able to hear the sound (It starts on the quietest level). </p>
 	<button onclick="decibel(125,-1); showdB(); " class="w3-btn w3-black"> Play Sound </button>
 	<br>
 	<br>
@@ -364,7 +364,7 @@ function toggleDataSeries(e) {
     	<div id="content" class="w3-container">
  
 <br>
-<p> Click the button below to hear the frequency. Adjust it to the quietest level you are able to hear the sound. </p>
+<p> Click the button below to hear the frequency. Adjust it to the quietest level you are able to hear the sound (It starts on the quietest level). </p>
 	<button onclick="decibel(125,1); showdB(); " class="w3-btn w3-black"> Play Sound </button>
 	<br>
 	<br>
@@ -388,7 +388,7 @@ function toggleDataSeries(e) {
 <div id="content" class="w3-container">
 	
 <br>
-<p> Click the button below to hear the frequency. Adjust it to the quietest level you are able to hear the sound. </p>
+<p> Click the button below to hear the frequency. Adjust it to the quietest level you are able to hear the sound (It starts on the quietest level). </p>
 	<button onclick="decibel(250,-1); showdB(); " class="w3-btn w3-black"> Play Sound </button>
 	<br>
 	<br>
@@ -412,7 +412,7 @@ function toggleDataSeries(e) {
 <div id="content" class="w3-container">
 	
 <br>
-<p> Click the button below to hear the frequency. Adjust it to the quietest level you are able to hear the sound. </p>
+<p> Click the button below to hear the frequency. Adjust it to the quietest level you are able to hear the sound (It starts on the quietest level). </p>
 	<button onclick="decibel(250,1); showdB(); " class="w3-btn w3-black"> Play Sound </button>
 	<br>
 	<br>
@@ -436,7 +436,7 @@ function toggleDataSeries(e) {
     	<div id="content" class="w3-container">
 		
 <br>
-<p> Click the button below to hear the frequency. Adjust it to the quietest level you are able to hear the sound. </p>
+<p> Click the button below to hear the frequency. Adjust it to the quietest level you are able to hear the sound (It starts on the quietest level). </p>
 	<button onclick="decibel(500,-1); showdB(); " class="w3-btn w3-black"> Play Sound </button>
 	<br>
 	<br>
@@ -460,7 +460,7 @@ function toggleDataSeries(e) {
     	<div id="content" class="w3-container">
 		
 <br>
-<p> Click the button below to hear the frequency. Adjust it to the quietest level you are able to hear the sound. </p>
+<p> Click the button below to hear the frequency. Adjust it to the quietest level you are able to hear the sound (It starts on the quietest level). </p>
 	<button onclick="decibel(500,1); showdB(); " class="w3-btn w3-black"> Play Sound </button>
 	<br>
 	<br>
@@ -485,7 +485,7 @@ function toggleDataSeries(e) {
     	<div id="content" class="w3-container">
 		
 <br>
-<p> Click the button below to hear the frequency. Adjust it to the quietest level you are able to hear the sound. </p>
+<p> Click the button below to hear the frequency. Adjust it to the quietest level you are able to hear the sound (It starts on the quietest level). </p>
 	<button onclick="decibel(1000,-1); showdB(); " class="w3-btn w3-black"> Play Sound </button>
 	<br>
 	<br>
@@ -509,7 +509,7 @@ function toggleDataSeries(e) {
     	<div id="content" class="w3-container">
 		
 <br>
-<p> Click the button below to hear the frequency. Adjust it to the quietest level you are able to hear the sound. </p>
+<p> Click the button below to hear the frequency. Adjust it to the quietest level you are able to hear the sound (It starts on the quietest level). </p>
 	<button onclick="decibel(1000,1); showdB(); " class="w3-btn w3-black"> Play Sound </button>
 	<br>
 	<br>
@@ -533,7 +533,7 @@ function toggleDataSeries(e) {
     	<div id="content" class="w3-container">
 		
 <br>
-<p> Click the button below to hear the frequency. Adjust it to the quietest level you are able to hear the sound. </p>
+<p> Click the button below to hear the frequency. Adjust it to the quietest level you are able to hear the sound (It starts on the quietest level). </p>
 	<button onclick="decibel(2000,-1); showdB(); " class="w3-btn w3-black"> Play Sound </button>
 	<br>
 	<br>
@@ -558,7 +558,7 @@ function toggleDataSeries(e) {
     	<div id="content" class="w3-container">
 		
 <br>
-<p> Click the button below to hear the frequency. Adjust it to the quietest level you are able to hear the sound. </p>
+<p> Click the button below to hear the frequency. Adjust it to the quietest level you are able to hear the sound (It starts on the quietest level). </p>
 	<button onclick="decibel(2000,1); showdB(); " class="w3-btn w3-black"> Play Sound </button>
 	<br>
 	<br>
@@ -583,7 +583,7 @@ function toggleDataSeries(e) {
     	<div id="content" class="w3-container">
 		
 <br>
-<p> Click the button below to hear the frequency. Adjust it to the quietest level you are able to hear the sound. </p>
+<p> Click the button below to hear the frequency. Adjust it to the quietest level you are able to hear the sound (It starts on the quietest level). </p>
 	<button onclick="decibel(4000,-1); showdB(); " class="w3-btn w3-black"> Play Sound </button>
 	<br>
 	<br>
@@ -608,7 +608,7 @@ function toggleDataSeries(e) {
     	<div id="content" class="w3-container">
 		
 <br>
-<p> Click the button below to hear the frequency. Adjust it to the quietest level you are able to hear the sound. </p>
+<p> Click the button below to hear the frequency. Adjust it to the quietest level you are able to hear the sound (It starts on the quietest level). </p>
 	<button onclick="decibel(4000,1); showdB(); " class="w3-btn w3-black"> Play Sound </button>
 	<br>
 	<br>
@@ -633,7 +633,7 @@ function toggleDataSeries(e) {
     	<div id="content" class="w3-container">
 		
 <br>
-<p> Click the button below to hear the frequency. Adjust it to the quietest level you are able to hear the sound. </p>
+<p> Click the button below to hear the frequency. Adjust it to the quietest level you are able to hear the sound (It starts on the quietest level). </p>
 	<button onclick="decibel(8000,-1); showdB(); " class="w3-btn w3-black"> Play Sound </button>
 	<br>
 	<br>
@@ -658,7 +658,7 @@ function toggleDataSeries(e) {
     	<div id="content" class="w3-container">
 		
 <br>
-<p> Click the button below to hear the frequency. Adjust it to the quietest level you are able to hear the sound. </p>
+<p> Click the button below to hear the frequency. Adjust it to the quietest level you are able to hear the sound (It starts on the quietest level). </p>
 	<button onclick="decibel(8000,1); showdB(); " class="w3-btn w3-black"> Play Sound </button>
 	<br>
 	<br>
